--- a/src/app/adminfolder/jobapplications/jobapplications.component.html
+++ b/src/app/adminfolder/jobapplications/jobapplications.component.html
@@ -1,30 +1,35 @@
-<div style="display: flex;justify-content:center;max-height: 100vh;font-size: 0.9rem;">
-    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal"
-        style="float: right;" (click)="displaymodal()">create job</button>
-    <div id="myModal" class="modal fade" role="dialog">
-
-    </div>
-    <!-- <div class="row m-5 mt-0" *ngIf="data else nodata">
-        <div class="col card m-2 mb-0 shadow  border-0" style="background-color: whiteSmoke;padding: 1rem; "
+<div style="font-size: 0.9rem;margin: 2rem;">
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal" style="float: right;"
+        (click)="displaymodal()">Create a new job</button>
+    <br /><br />
+    <div class=" m-5 mt-0" *ngIf="data else nodata">
+        <div class=" card m-2  mb-0 shadow  border-0"
+            style="background-color: whiteSmoke;padding: 1rem;margin-left: 20vw !important; width: 50vw;"
             *ngFor="let c of data ; index as i">
-            {{c.jobid}}
-            {{c.firstname}} {{c.middlename}} {{c.lastname}}
-            {{c.mobileno}}
-            {{c.jobtitle}}
-            {{c.prevexperience}}
+            <div class="row">
+                <div class="col-9">
+                    {{c.jobid}}
+                    {{c.firstname}} {{c.middlename}} {{c.lastname}}
+                    {{c.mobileno}}
+                    {{c.jobtitle}}
+                    {{c.prevexperience}}
 
-            <span style="float: right;">
-                <span style="display: flex;"><button class="btn btn-success m-1"
-                        style="background-color: green;color:white" *ngIf="c.approve==''"
-                        (click)="approve(i,'yes')">Accept</button>
-                    <button class="btn btn-danger m-1" *ngIf="c.approve==''" (click)="approve(i,'no')"
-                        style="background-color: rgb(110, 16, 16);color:white">Reject</button></span>
-                <button class="btn btn-success" *ngIf="c.approve=='yes'"
-                    style="background-color: green;color:white">Accepted</button>
-                <button class="btn btn-danger" *ngIf="c.approve=='no'"
-                    style="background-color: rgb(110, 16, 16);color:white">Rejected</button>
+                </div>
+                <div class="col">
+                    <span style="justify-content: right;">
+                        <span style="display: flex;"><button class="btn btn-success m-1"
+                                style="background-color: green;color:white" *ngIf="c.approve==''"
+                                (click)="approve(i,'yes')">Accept</button>
+                            <button class="btn btn-danger m-1" *ngIf="c.approve==''" (click)="approve(i,'no')"
+                                style="background-color: rgb(110, 16, 16);color:white">Reject</button></span>
+                        <button class="btn btn-success" *ngIf="c.approve=='yes'"
+                            style="background-color: green;color:white">Accepted</button>
+                        <button class="btn btn-danger" *ngIf="c.approve=='no'"
+                            style="background-color: rgb(110, 16, 16);color:white">Rejected</button>
 
-            </span>
+                    </span>
+                </div>
+            </div>
         </div>
     </div>
     <div class="row m-5 mt-0" *ngIf="data else nodata">
@@ -80,7 +85,7 @@
                 style="background-color: rgb(110, 16, 16);color:white">Rejected</button>
 
         </div>
-    </div> -->
+    </div>
     <ng-template #nodata>
         No job applications.
     </ng-template>
@@ -92,28 +97,34 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title" style="text-align: center;display: flex;justify-content: center;">Job Application</h4>
+                <h4 class="modal-title" style="text-align: center;display: flex;justify-content: center;">Job
+                    Application</h4>
             </div>
-            <div class="modal-body " >
-                <div  [formGroup]="jobdetails" class="table-responsive" style="height: 84vh;margin-top: 0;padding-top:  0;">
+            <div class="modal-body ">
+                <div [formGroup]="jobdetails" class="table-responsive"
+                    style="height: 84vh;margin-top: 0;padding-top:  0;">
                     <label><b>Job Id</b></label>
                     <input type="text" class="form-control shadow-none" placeholder="Job Id" formControlName="jobid">
                     <span *ngIf="err" style="color:crimson;font-size: 0.8rem;">Enter valid text</span><br />
                     <label><b>Job Tittle</b></label>
-                    <input type="text" class="form-control shadow-none" placeholder="Job Tittle" formControlName="jobtitle">
+                    <input type="text" class="form-control shadow-none" placeholder="Job Tittle"
+                        formControlName="jobtitle">
                     <span *ngIf="err" style="color:crimson;font-size: 0.8rem;">Enter valid text</span><br />
                     <label><b>Job Location</b></label>
-                    <input type="text" class="form-control shadow-none" placeholder="Job Tittle" formControlName="location">
+                    <input type="text" class="form-control shadow-none" placeholder="Job Tittle"
+                        formControlName="location">
                     <span *ngIf="err" style="color:crimson;font-size: 0.8rem;">Enter valid text</span><br />
                     <label><b>Salary</b></label>
                     <input type="text" class="form-control shadow-none" placeholder="Salary" formControlName="amount">
                     <span *ngIf="err" style="color:crimson;font-size: 0.8rem;">Enter valid text</span><br>
                     <label><b>Job Description</b></label>
                     <textarea type="text" class="form-control shadow-none" placeholder="Job Description"
-                    formControlName="jobdescription"></textarea>
+                        formControlName="jobdescription"></textarea>
                     <span *ngIf="err" style="color:crimson;font-size: 0.8rem;">Enter valid text</span><br>
-                        <button (click)="display='None'" style="float: right ;margin-right:1.2rem;" class="btn btn-danger" > Close</button>
-                        <button (click)="createjob()" style="float: right ;margin:0rem 1rem;" class="btn btn-primary" >Create Job</button>
+                    <button (click)="display='None'" style="float: right ;margin-right:1.2rem;" class="btn btn-danger">
+                        Close</button>
+                    <button (click)="createjob()" style="float: right ;margin:0rem 1rem;" class="btn btn-primary">Create
+                        Job</button>
                 </div>
             </div>
 
