--- a/src/app/appservices/appservices.component.html
+++ b/src/app/appservices/appservices.component.html
@@ -1,149 +1,147 @@
-<div id="top" class="m-4">
-    <h4>
-        IDENTIFICATION OF SLUMS</h4>
-
-    <p class="card border-0 shadow " style="background-color: whiteSmoke;padding: 2rem;">
-        Slums are identified using geographic information system (GIS) which is a conceptualized framework that
-        provides the ability to capture and analyze spatial and geographic data. With the varying intensity of
-        the image captured the change in the population or area occupied by the slum is calculated. Street view
-        also enabled to have better visualization of slum along with living conditions.
-
-    </p>
-
-    <h4>AREA ANALYSIS</h4>
-
-    <p  class="card border-0 shadow " style="background-color: whiteSmoke;padding: 2rem;">
-        Area analysis is an amalgamation of a list containing geographical features of a particular area, soil type,
-        projects
-        being and already implemented in that area and constructions that are supported in that region based on soil
-        testing.
-
-    </p>
-    <h4>
-        CATEGORIZED MAPS:
-    </h4>
-    <p class="card border-0 shadow " style="background-color: whiteSmoke;padding: 2rem;">
-        Categorized maps are the domain where the slums can be identified based on Population density or Area Occupied by
-        the
-        slum.
-    </p>
-    <ul>
-        <li>
+<div id="top" class="m-2" style="font-family: poppins;">
+    <div class="row" style="margin: 0;padding:0">
+        <div class="col m-5 shadow " style="background-color: whiteSmoke;padding: 2rem;">
             <h4>
-                Population density-based map:
+                IDENTIFICATION OF SLUMS</h4>
 
-            </h4>
-        </li>
-        <p class="card border-0 shadow " style="background-color: whiteSmoke;padding: 2rem;">
-            POPULATION DENSITY MAPS are typically derived from census data and aggregated into arbitrary areal units such as
-            census
-            tracts, block groups, or at best census blocks. The major assumption with this representation is that within the
-            boundary of the areal unit the population density is homogeneous. While in dense urban areas comprised of small
-            areal
-            units this assumption may be relatively accurate, population densities in larger census block groups outside of the
-            urban center often differ significantly within the block group boundary. This technique can be improved by using
-            ancillary data sources such as topographic maps, satellite imagery, and land cover datasets to estimate the true
-            population distribution. Dasymetric mapping can be used to categorize geography into inhabitable and uninhabitable
-            regions based on predefined density values for different settlement patterns.
+            <p>
+                Slums are identified using geographic information system (GIS) which is a conceptualized framework that
+                provides the ability to capture and analyze spatial and geographic data. With the varying intensity of
+                the image captured the change in the population or area occupied by the slum is calculated. Street view
+                also enabled to have better visualization of slum along with living conditions.
+
+            </p>
+
+        </div>
+        <div class="col m-5 shadow " style="background-color: whiteSmoke;padding: 2rem;">
+
+            <h4>AREA ANALYSIS</h4>
+
+            <p>
+                Area analysis is an amalgamation of a list containing geographical features of a particular area, soil
+                type,
+                projects
+                being and already implemented in that area and constructions that are supported in that region based on
+                soil
+                testing.
+
+            </p>
+        </div>
+
+    </div>
+    <div style="margin-left: 3rem;">
+        <h4>
+            CATEGORIZED MAPS
+        </h4>
+        <p>
+            Categorized maps are the domain where the slums can be identified based on Population density or Area
+            Occupied
+            by
+            the
+            slum.
         </p>
-        <li>
+    </div>
+    <div style="margin: 0;padding:0">
+        <div class="col m-5 mb-4 mt-0 shadow " style="background-color: whiteSmoke;padding: 2rem;">
             <h4>
-                Area Categorization:
-            </h4>
-        </li>
+                Population density-based map</h4>
+
+            <p>
+                POPULATION DENSITY MAPS are typically derived from census data and aggregated into arbitrary areal units
+                such as
+                census
+                tracts, block groups, or at best census blocks. The major assumption with this representation is that
+                within
+                the
+                boundary of the areal unit the population density is homogeneous. While in dense urban areas comprised
+                of
+                small
+                areal
+                units this assumption may be relatively accurate, population densities in larger census block groups
+                outside
+                of the
+                urban center often differ significantly within the block group boundary. This technique can be improved
+                by
+                using
+                ancillary data sources such as topographic maps, satellite imagery, and land cover datasets to estimate
+                the
+                true
+                population distribution. Dasymetric mapping can be used to categorize geography into inhabitable and
+                uninhabitable
+                regions based on predefined density values for different settlement patterns. </p>
+
+        </div>
+        <div class="col m-5 mt-0 shadow " style="background-color: whiteSmoke;padding: 2rem;">
+
+            <h4> Area Categorization</h4>
+
+            <p>
+                Both antiquated and new slums will be categorized and listed based on the area they are occupying.
+
+            </p>
+        </div>
+
+    </div>
+
+
+
+
+
+
+    <div class="m-5">
+
+        <h4>
+            SAMPLE 2D AND 3D DIAGRAMS:
+        </h4>
+
         <p class="card border-0 shadow " style="background-color: whiteSmoke;padding: 2rem;">
-            Both antiquated and new slums will be categorized and listed based on the area they are occupying.
-        </p>
-    </ul>
+            2D and 3D designs are provided here in this section based on the Terrion, soil type and no of residents
+            which or
+            preferably economic and also which can be maintained at low cost with maximum safety.
+        </p><br />
+        <h4>
+            EMPLOYMENT OPPORTUNITIES
+        </h4>
+        <span class="card border-0 shadow " style="background-color: whiteSmoke;padding: 2rem;">
+            <h5>
+                Work with us
+            </h5>
 
-    
-    
+            <p>
+                Slum citizens can find jobs according to their own skill sets with an optimal salary from their own
+                place's
+                which will
+                be posted on this website.
+            </p>
+        </span><br />
+        <span class="card border-0 shadow " style="background-color: whiteSmoke;padding: 2rem;">
+            <h5>
+                Work for us
+            </h5>
 
-    
-    
+            <p>
+                All the employment opportunities available in the region will be posted by various owners on the
+                employment
+                platform on
+                which the job seekers can avail the position or role by submitting the necessary requirements.
+            </p>
+        </span><br /><br />
+        <h4>
+            DONATIONS:
+        </h4>
 
-    
-    <h4>
-        SAMPLE 2D AND 3D DIAGRAMS:
-    </h4>
-
-    <p  class="card border-0 shadow " style="background-color: whiteSmoke;padding: 2rem;">
-        2D and 3D designs are provided here in this section based on the Terrion, soil type and no of residents which or
-        preferably economic and also which can be maintained at low cost with maximum safety.
-    </p>
-    <h4>
-        EMPLOYMENT OPPORTUNITIES:
-    </h4>
-    <h5>
-        Work with us:
-    </h5>
-
-    <p  class="card border-0 shadow " style="background-color: whiteSmoke;padding: 2rem;">
-    Slum citizens can find jobs according to their own skill sets with an optimal salary from their own place's which will
-    be posted on this website.
-    </p>
-    <h5>
-        Work for us:
-    </h5>
-
-    <p  class="card border-0 shadow " style="background-color: whiteSmoke;padding: 2rem;">
-    All the employment opportunities available in the region will be posted by various owners on the employment platform on
-    which the job seekers can avail the position or role by submitting the necessary requirements.
-    </p>
-    <h4>
-        DONATIONS:
-    </h4>
-    
-    <span class="card border-0 shadow " style="background-color: whiteSmoke;padding: 2rem;">
-    <ul>
-        <li>
-            -Donators can send money via online payment.
-        </li>
-        <li>
-            -NGOs that are working for the development of slums will be listed here
-        </li>
-        <li>
-            -All the work and progress carried out with the help of donations will be listed here
-        </li>
-    </ul>
-    </span>
+        <span class="card border-0 shadow " style="background-color: whiteSmoke;padding: 2rem;">
+            <ul>
+                <li>
+                    Donators can send money via online payment.
+                </li>
+                <li>
+                    NGOs that are working for the development of slums will be listed here
+                </li>
+                <li>
+                    All the work and progress carried out with the help of donations will be listed here
+                </li>
+            </ul>
+        </span>
+    </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
