--- a/src/app/workwithus/workwithus.component.html
+++ b/src/app/workwithus/workwithus.component.html
@@ -5,9 +5,10 @@
         </div>
     </div>
     <div class="col">
-        <div class="row m-5 mt-0" *ngIf="search() else nodata">
-            <input class="form-control" [(ngModel)]="searchtext" placeholder="search" style="float: right;">
-            <div class="col-3 card m-5 mb-0 shadow  border-0" style="background-color: whiteSmoke;padding: 1rem; "
+        <div class="row m-5 mt-4" *ngIf="search() else nodata">
+            <input class="form-control shadow-none" [(ngModel)]="searchtext" placeholder=" 🔎 Search"
+                style="float: right;">
+            <div class="col-4 card m-5 mb-0  shadow  border-0" style="background-color: whiteSmoke;padding: 2rem; "
                 *ngFor="let c of search() ; index as i">
                 <div class="row">
                     <div class="col">
@@ -22,9 +23,10 @@
                     </div>
                 </div>
             </div>
+
         </div>
 
-        
+
 
         <ng-template #nodata><br /><br />
             <div class="text-center">
@@ -40,58 +42,61 @@
     <div class="modal-dialog" style="margin-left: 25%;" role="document">
         <div class="modal-content" style="width: 50vw;">
             <div class="modal-header" style="justify-content: center;align-items: center;display: flex;">
-                <h4 class="modal-title" style="text-align: center;display: flex;justify-content: center;align-items: center;">Job
+                <h4 class="modal-title"
+                    style="text-align: center;display: flex;justify-content: center;align-items: center;">Job
                     Application</h4>
             </div>
             <div class="modal-body " style="margin: 0%;padding:1rem">
-                <form [formGroup]="workapply" >
+                <form [formGroup]="workapply">
                     <!-- {{currentApplying | json }} -->
                     <div style="">
-                        <div style="color:green" *ngIf="successMsg!=''"><strong><i style="color:green" class='bx bxs-check-circle'></i>
+                        <div style="color:green" *ngIf="successMsg!=''"><strong><i style="color:green"
+                                    class='bx bxs-check-circle'></i>
                                 {{successMsg}}</strong></div>
                         <br>
                         <div class="row">
                             <div class="col">
                                 <label>First Name <sup style="color:crimson"><strong>*</strong></sup></label><br>
-                                <input (click)="showerr=false" class="form-control shadow-none" placeholder="Enter  First Name"
-                                    formControlName="firstname">
+                                <input (click)="showerr=false" class="form-control shadow-none"
+                                    placeholder="Enter  First Name" formControlName="firstname">
                                 <span *ngIf="showerr" style="color:crimson;font-size: 0.8rem;">Enter valid text</span>
                                 <!-- <span *ngIf="!showerr" style="color:crimson;font-size: 0.8rem;">k</span> -->
                             </div>
                             <div class="col">
                                 <label>Middle Name </label><br>
-                                <input (click)="showerr=false" class="form-control shadow-none" placeholder="Enter  Middle Name"
-                                    formControlName="middlename">
+                                <input (click)="showerr=false" class="form-control shadow-none"
+                                    placeholder="Enter  Middle Name" formControlName="middlename">
                                 <!-- <span *ngIf="showerr" style="color:crimson;font-size: 0.8rem;">Enter valid text</span> -->
                             </div>
                             <div class="col">
                                 <label>Last Name <sup style="color:crimson"><strong>*</strong></sup></label><br>
-                                <input (click)="showerr=false" class="form-control shadow-none" placeholder="Enter  Last Name"
-                                    formControlName="lastname">
+                                <input (click)="showerr=false" class="form-control shadow-none"
+                                    placeholder="Enter  Last Name" formControlName="lastname">
                                 <span *ngIf="showerr" style="color:crimson;font-size: 0.8rem;">Enter valid text</span>
-                
+
                             </div>
                         </div>
                         <br>
                         <div class="row">
                             <div class="col">
                                 <label>Email </label><br>
-                                <input (click)="showerr=false" class="form-control shadow-none" placeholder="Enter  Email" type="email"
-                                    formControlName="email">
+                                <input (click)="showerr=false" class="form-control shadow-none"
+                                    placeholder="Enter  Email" type="email" formControlName="email">
                                 <!-- <span *ngIf="showerr" style="color:crimson;font-size: 0.8rem;">Enter valid text</span> -->
                             </div>
                             <div class="col">
                                 <label>Mobile Number <sup style="color:crimson"><strong>*</strong></sup></label><br>
-                                <input (click)="showerr=false" class="form-control shadow-none" placeholder="Enter  Mobile Numnber"
-                                    type="number" formControlName="mobileno">
+                                <input (click)="showerr=false" class="form-control shadow-none"
+                                    placeholder="Enter  Mobile Numnber" type="number" formControlName="mobileno">
                                 <span *ngIf="showerr" style="color:crimson;font-size: 0.8rem;">Enter valid text</span>
                             </div>
                             <div class="col">
                                 <label>Alternative Mobile Number </label><br>
-                                <input (click)="showerr=false" class="form-control shadow-none" placeholder="Enter  Alternative Mobile "
-                                    type="number" formControlName="altmobileno">
+                                <input (click)="showerr=false" class="form-control shadow-none"
+                                    placeholder="Enter  Alternative Mobile " type="number"
+                                    formControlName="altmobileno">
                                 <!-- <span *ngIf="showerr" style="color:crimson;font-size: 0.8rem;">Enter valid text</span> -->
-                
+
                             </div>
                         </div>
                         <br>
@@ -109,7 +114,8 @@
                                 <span *ngIf="showerr" style="color:crimson;font-size: 0.8rem;">Enter valid text</span>
                             </div>
                             <div class="col">
-                                <label>Previous Experience <sup style="color:crimson"><strong>*</strong></sup></label><br>
+                                <label>Previous Experience <sup
+                                        style="color:crimson"><strong>*</strong></sup></label><br>
                                 <select class="form-select shadow-none" formControlName="prevexperience">
                                     <option value="" disabled selected>Experience Status</option>
                                     <option value="yes">Yes</option>
@@ -118,26 +124,27 @@
                                 <span *ngIf="showerr" style="color:crimson;font-size: 0.8rem;">Enter valid text</span>
                             </div>
                             <div class="col">
-                                <label>Previous Work Place <sup style="color:crimson"><strong>*</strong></sup></label><br>
-                                <input (click)="showerr=false" class="form-control shadow-none" placeholder="Enter Previous Work Place"
-                                    formControlName="prevworkplace">
+                                <label>Previous Work Place <sup
+                                        style="color:crimson"><strong>*</strong></sup></label><br>
+                                <input (click)="showerr=false" class="form-control shadow-none"
+                                    placeholder="Enter Previous Work Place" formControlName="prevworkplace">
                                 <span *ngIf="showerr" style="color:crimson;font-size: 0.8rem;">Enter valid text</span>
-                
+
                             </div>
                         </div><br />
                         <div class="row">
                             <div>
                                 <label>Address <sup style="color:crimson"><strong>*</strong></sup></label><br>
-                                <textarea class="form-control shadow-none" placeholder="Enter  Address" formControlName="address"
-                                    style="width: 100%;"></textarea>
+                                <textarea class="form-control shadow-none" placeholder="Enter  Address"
+                                    formControlName="address" style="width: 100%;"></textarea>
                                 <span *ngIf="showerr" style="color:crimson;font-size: 0.8rem;">Enter valid
                                     address</span>
-                
+
                             </div>
                         </div><br />
                         <div class="row" style="float: right;">
                             <div style="display: flex;justify-content: center;align-items: center;">
-                                <button class="btn btn"  (click)="apply()"
+                                <button class="btn btn" (click)="apply()"
                                     style="background-color: rgba(1, 9, 71, 1);color: white;padding: 0.6rem 2rem; font-weight: bold;">Apply</button>
                                 <button class="btn btn-danger" (click)="display='None'"
                                     style="color: white;padding: 0.6rem 2rem; font-weight: bold;margin-left: 2rem;">Close</button>
