--- a/src/app/adminfolder/admindonations/admindonations.component.html
+++ b/src/app/adminfolder/admindonations/admindonations.component.html
@@ -1,5 +1,34 @@
-<div *ngFor="let c of data">
-    <div class="card">
-        {{c| json}}
+<div style="display: flex;justify-content:center;max-height: 100vh;font-size: 0.9rem;">
+    <div class="row  mt-0" st>
+        <div class="col-4 shadow card m-5 mb-0  border-0" style="background-color: whiteSmoke;padding: 1rem; ">
+            <h5>Karthik</h5>
+            <span>karthik.kovi2001@gmail.com</span>
+            <span>9529875312</span>
+            <strong>15000 /-</strong>
+            <span>Donated on 19 January 2022</span>
+        </div>
+        <div class="col-4 shadow card m-5 mb-0  border-0" style="background-color: whiteSmoke;padding: 1rem; ">
+            <h5>Rakshitha</h5>
+            <span>Rakshitha2001@gmail.com</span>
+            <span>9529875312</span>
+            <strong>15000 /-</strong>
+            <span>Donated on 19 January 2022</span>
+        </div>
+        <div class="col-4 shadow card m-5 mb-0  border-0" style="background-color: whiteSmoke;padding: 1rem; ">
+            <h5>Umesh</h5>
+            <span>Umesh@gmail.com</span>
+            <span>9529875312</span>
+            <strong>15000 /-</strong>
+            <span>Donated on 19 January 2022</span>
+        </div>
+        <div class="col-4 shadow card m-5 mb-0  border-0" style="background-color: whiteSmoke;padding: 1rem; ">
+            <h5>Kiran</h5>
+            <span>kiran2001@gmail.com</span>
+            <span>9529875312</span>
+            <strong>15000 /-</strong>
+            <span>Donated on 19 January 2022</span>
+        </div>
+
     </div>
 </div>
+<br /><br />
