--- a/src/app/adminfolder/adminfeedback/adminfeedback.component.html
+++ b/src/app/adminfolder/adminfeedback/adminfeedback.component.html
@@ -8,6 +8,7 @@
             <span>{{c.suggestions}}</span>
             <strong>Feedback</strong>
             <span>{{c.feedbackmsg}}</span>
-    
+
         </div>
-    </div></div>
+    </div>
+</div>
