--- a/src/app/adminfolder/jobapplications/jobapplications.component.html
+++ b/src/app/adminfolder/jobapplications/jobapplications.component.html
@@ -32,66 +32,81 @@
             </div>
         </div>
     </div>
-    <div class="row m-5 mt-0" *ngIf="data else nodata">
-        <div class="col-3 card m-5 mb-0 shadow  border-0" style="background-color: whiteSmoke;padding: 1rem; "
-            *ngFor="let c of data ; index as i">
-            <table class="table">
-                <tbody>
-                    <tr>
-                        <td>Name</td>
-                        <td>{{c.firstname}} {{c.middlename}} {{c.lastname}}</td>
-                    </tr>
-                    <tr>
-                        <td>Email</td>
-                        <td>{{c.email}}</td>
-                    </tr>
-                    <tr>
-                        <td>Mobile</td>
-                        <td>{{c.mobileno}}</td>
-                    </tr>
-                    <tr>
-                        <td>Alternative mobile</td>
-                        <td>{{c.altmobileno}}</td>
-                    </tr>
-                    <tr>
-                        <td>Job role</td>
-                        <td>{{c.jobid}}</td>
-                    </tr>
-                    <tr>
-                        <td>Previous Experience</td>
-                        <td>{{c.prevexperience}}</td>
-                    </tr>
-                    <tr>
-                        <td>Previous workplace</td>
-                        <td>{{c.prevworkplace}}</td>
-                    </tr>
-                    <tr>
-                        <td>Address</td>
-                        <td>{{c.address}}</td>
-                    </tr>
-
-
-
-                </tbody>
-            </table>
-
-            <span style="display: flex;"><button class="btn btn-success m-1" style="background-color: green;color:white"
-                    *ngIf="c.approve==''" (click)="approve(i,'yes')">Approve</button>
-                <button class="btn btn-danger m-1" *ngIf="c.approve==''" (click)="approve(i,'no')"
-                    style="background-color: rgb(110, 16, 16);color:white">Reject</button></span>
-            <button class="btn btn-success" *ngIf="c.approve=='yes'"
-                style="background-color: green;color:white">Approved</button>
-            <button class="btn btn-danger" *ngIf="c.approve=='no'"
-                style="background-color: rgb(110, 16, 16);color:white">Rejected</button>
-
-        </div>
-    </div>
+    
     <ng-template #nodata>
         No job applications.
     </ng-template>
 </div>
 
 
+
+<div style="margin-top: 10%;" class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':display}">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" style="text-align: center;display: flex;justify-content: center;">Job
+                    Application</h4>
+            </div>
+            <div class="modal-body ">
+                <div class="row m-5 mt-0" *ngIf="data else nodata">
+                    <div class="col-3 card m-5 mb-0 shadow  border-0" style="background-color: whiteSmoke;padding: 1rem; "
+                        *ngFor="let c of data ; index as i">
+                        <table class="table">
+                            <tbody>
+                                <tr>
+                                    <td>Name</td>
+                                    <td>{{c.firstname}} {{c.middlename}} {{c.lastname}}</td>
+                                </tr>
+                                <tr>
+                                    <td>Email</td>
+                                    <td>{{c.email}}</td>
+                                </tr>
+                                <tr>
+                                    <td>Mobile</td>
+                                    <td>{{c.mobileno}}</td>
+                                </tr>
+                                <tr>
+                                    <td>Alternative mobile</td>
+                                    <td>{{c.altmobileno}}</td>
+                                </tr>
+                                <tr>
+                                    <td>Job role</td>
+                                    <td>{{c.jobid}}</td>
+                                </tr>
+                                <tr>
+                                    <td>Previous Experience</td>
+                                    <td>{{c.prevexperience}}</td>
+                                </tr>
+                                <tr>
+                                    <td>Previous workplace</td>
+                                    <td>{{c.prevworkplace}}</td>
+                                </tr>
+                                <tr>
+                                    <td>Address</td>
+                                    <td>{{c.address}}</td>
+                                </tr>
+                
+                
+                
+                            </tbody>
+                        </table>
+                
+                        <span style="display: flex;"><button class="btn btn-success m-1" style="background-color: green;color:white"
+                                *ngIf="c.approve==''" (click)="approve(i,'yes')">Approve</button>
+                            <button class="btn btn-danger m-1" *ngIf="c.approve==''" (click)="approve(i,'no')"
+                                style="background-color: rgb(110, 16, 16);color:white">Reject</button></span>
+                        <button class="btn btn-success" *ngIf="c.approve=='yes'"
+                            style="background-color: green;color:white">Approved</button>
+                        <button class="btn btn-danger" *ngIf="c.approve=='no'"
+                            style="background-color: rgb(110, 16, 16);color:white">Rejected</button>
+                
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
 
 <div style="margin-top: 10%;" class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':display}">
     <div class="modal-dialog" role="document">
