--- a/src/app/adminfolder/jobapplications/jobapplications.component.html
+++ b/src/app/adminfolder/jobapplications/jobapplications.component.html
@@ -34,7 +34,12 @@
     </div>
     
     <ng-template #nodata>
-        No job applications.
+        <div style="height: 60vh;display:flex;align-items:center;justify-content:center">
+            <h4>
+
+                No job applications.
+            </h4>
+        </div>
     </ng-template>
 </div>
 
