--- a/src/app/workwithus/workwithus.component.html
+++ b/src/app/workwithus/workwithus.component.html
@@ -31,8 +31,8 @@
 
 
         <ng-template #nodata><br /><br />
-            <div class="text-center">
-                No job posts
+            <div class="text-center" style="display: flex;justify-content:center;align-items:center">
+                No Job Posts
             </div>
         </ng-template>
 
