--- a/src/app/donations/donations.component.css
+++ b/src/app/donations/donations.component.css
@@ -20,3 +20,45 @@ h1 {
     font-family: 'Montserrat';
     font-size: 5rem;
 }
+
+.active {
+    font-weight: 800;
+    /* letter-spacing: 1px; */
+    padding-bottom: 0.3rem;
+    border-bottom: 3px solid white;
+    border-radius: 0.2rem;
+    /* transition: all 5s; */
+
+}
+
+.view {
+    position: fixed;
+    left: 72%;
+    bottom: 1%;
+    right: 1%;
+    background: rgb(5, 166, 219);
+    padding: 15px;
+    box-shadow: 0px 0px 10px 2px rgb(214, 210, 210);
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    animation: fade 3s;
+    color: white;
+    width: auto;
+    cursor: context-menu;
+    /* z-index: 10; */
+}
+
+@keyframes fade {
+    0% {
+        opacity: 0;
+
+    }
+
+    100% {
+        opacity: 1;
+
+    }
+}
