--- a/src/app/feedback/feedback.component.css
+++ b/src/app/feedback/feedback.component.css
@@ -18,3 +18,35 @@ h1{
 	font-family: 'Montserrat';
 	font-size: 5rem;
 }
+
+.view {
+	position: fixed;
+	left: 72%;
+	bottom: 1%;
+	right: 1%;
+	background: rgb(5, 166, 219);
+	padding: 15px;
+	box-shadow: 0px 0px 10px 2px rgb(214, 210, 210);
+	border-radius: 8px;
+	display: flex;
+	justify-content: center;
+	text-align: center;
+	align-items: center;
+	animation: fade 3s;
+	color: white;
+	width: auto;
+	cursor: context-menu;
+	/* z-index: 10; */
+}
+
+@keyframes fade {
+	0% {
+		opacity: 0;
+
+	}
+
+	100% {
+		opacity: 1;
+
+	}
+}
